Angular 20 upgrade and depended libraries; Removed all authors functionality as it is not needed after full book search is implemented;

--- a/apps/site/src/app/features/author/components/author/author.component.html
+++ b/apps/site/src/app/features/author/components/author/author.component.html
@@ -1,14 +1,12 @@
-<div *ngIf="authorSummary() as author">
+@if (authorSummary(); as author) {
+<div>
   @if (author.image) {
   <img [src]="author.image" (error)="hideImage($event)" alt="Обложка книги" />
   }
   <div class="content">
     <h3>{{ author.full }}</h3>
-
     <lib-author-genres-list [genres]="author.genres"> </lib-author-genres-list>
-
     <span class="annotation" [innerHTML]="author.about"></span>
-
     <div class="books">
       <h4>Произведения:</h4>
       @for (book of author.books; track book.name) {
@@ -21,3 +19,4 @@
     </div>
   </div>
 </div>
+}
