--- a/apps/site/src/app/features/books/components/books/books.component.html
+++ b/apps/site/src/app/features/books/components/books/books.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <h5 loading [thenShow]="books">
     <span>Поиск по книгам</span>
-    <form (submit)="search()">
+    <form (submit)="search($event)">
       <input (input)="updateQuery($event)" placeholder="Введите название..." />
       <button mat-fab extended="true" color="success" type="submit">
         <mat-icon>search</mat-icon>
@@ -14,23 +14,15 @@
     @if (data()) { @if (data()!.length === 0) {
     <span>Книги не найдены</span>
     }
-    <li-virtual-scroll
-      [items]="data()!"
-      [gridList]="true"
-      [itemWidth]="250"
-      [itemHeight]="50"
-      [trackBy]="trackByFn"
-      libPerfectScrollbar
-      class="books-grid"
-    >
-      <mat-chip-set aria-label="Книги">
-        <nav *liVirtualItem="let item">
-          <lib-tag-link [value]="item.id" linkPrefix="/book">{{
-            item.full
-          }}</lib-tag-link>
-        </nav>
-      </mat-chip-set>
-    </li-virtual-scroll>
+    <div libPerfectScrollbar class="books-grid">
+      @for (item of data(); track item.id){
+      <nav>
+        <lib-tag-link [value]="item.id" linkPrefix="/book">{{
+          item.full
+        }}</lib-tag-link>
+      </nav>
+      }
+    </div>
     }
   </ng-template>
   @if (errors() && errors().length > 0) {
