--- a/libs/ui/src/lib/components/height-calculate/height-calculate.component.html
+++ b/libs/ui/src/lib/components/height-calculate/height-calculate.component.html
@@ -1,5 +1,3 @@
-<lib-calculate
-  *ngIf="run()"
-  #child
-  (done)="calculationDone($event)"
-></lib-calculate>
+@if (run()) {
+<lib-calculate #child (done)="calculationDone($event)"></lib-calculate>
+}
