Added Irina voice; fix for voice cache reset

--- a/apps/site/src/app/features/settings/components/settings/settings.component.html
+++ b/apps/site/src/app/features/settings/components/settings/settings.component.html
@@ -10,6 +10,7 @@
         >
         <mat-button-toggle [value]="Voices.Ermil">Ермил</mat-button-toggle>
         <mat-button-toggle [value]="Voices.Tamara">Тамара</mat-button-toggle>
+        <mat-button-toggle [value]="Voices.Irina">Ирина</mat-button-toggle>
         <mat-button-toggle [value]="Voices.Kirill">Кирилл</mat-button-toggle>
         <mat-button-toggle [value]="Voices.Jane">Жанна</mat-button-toggle>
         <mat-button-toggle [value]="Voices.Zahar">Захар</mat-button-toggle>
