Fixes for settings timer selector

--- a/apps/site/src/app/features/settings/components/settings/settings.component.html
+++ b/apps/site/src/app/features/settings/components/settings/settings.component.html
@@ -54,8 +54,7 @@
     <fieldset class="timer">
       <ngx-mat-timepicker-field
         formControlName="timer"
-        [min]="'0:00'"
-        [max]="'23:59'"
+        [controlOnly]="true"
         [format]="24"
       ></ngx-mat-timepicker-field>
     </fieldset>
