--- a/apps/site/src/app/main/components/main/main.component.scss
+++ b/apps/site/src/app/main/components/main/main.component.scss
@@ -13,6 +13,7 @@
     background-color: var(--mat-app-background-color);
     display: flex;
     overflow: hidden;
+    gap: $default-padding;
 
     main-header {
       flex: 0 0;
