--- a/apps/site/src/app/shared/components/main-header/main-header.component.html
+++ b/apps/site/src/app/shared/components/main-header/main-header.component.html
@@ -11,8 +11,15 @@
     <mat-icon>menu</mat-icon>
     Меню
   </button>
-  @if (showPlayerButton()) {
+  @if (playerIsActive()) {
   <player-button></player-button>
-  }
+  } @else {
   <a href="/"><img alt="Book-play.ru" /></a>
+  <span
+    class="title"
+    title="платформа для прослушивания книг, озвученных нейросетью"
+  >
+    - платформа для прослушивания книг, озвученных нейросетью.</span
+  >
+  }
 </ng-container>
