--- a/apps/site/src/app/shared/components/main-header/main-header.component.scss
+++ b/apps/site/src/app/shared/components/main-header/main-header.component.scss
@@ -25,6 +25,12 @@
       height: $header-height - $default-padding;
     }
   }
+
+  span.title {
+    text-wrap: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
 }
 
 body.light :host img {
