--- a/apps/site/src/app/main/styles/main.scss
+++ b/apps/site/src/app/main/styles/main.scss
@@ -20,7 +20,7 @@ $light-theme: mat.define-theme(
   (
     color: (
       theme-type: light,
-      primary: mat.$green-palette,
+      primary: mat.$azure-palette,
     ),
   )
 );
@@ -28,7 +28,7 @@ $dark-theme: mat.define-theme(
   (
     color: (
       theme-type: dark,
-      primary: mat.$green-palette,
+      primary: mat.$azure-palette,
     ),
   )
 );
@@ -62,6 +62,10 @@ html {
       var(--mat-sys-on-surface)
     );
     font-weight: normal;
+  }
+
+  a.underline {
+    color: var(--mat-sys-primary);
   }
 
   mat-chip {
