--- a/apps/site/src/app/features/books/components/books/books.component.scss
+++ b/apps/site/src/app/features/books/components/books/books.component.scss
@@ -14,6 +14,7 @@
     padding: 2 * $default-padding;
 
     h5 {
+      margin: $default-padding 0 2 * $default-padding 0;
       display: flex;
       flex: 0 0;
       gap: $default-padding;
