--- a/apps/site/src/app/index.html
+++ b/apps/site/src/app/index.html
@@ -9,7 +9,8 @@
     <meta name="google" content="notranslate" />
     <meta http-equiv="Content-Language" content="ru_RU" />
     <base href="/" />
-    <meta name="viewport" content="width=530, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="interactive-widget=resizes-content" />
     <meta name="yandex-verification" content="3440eb5c63c623cf" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link rel="manifest" href="manifest.json" />
