Implemented checkbox for turning ON/OFF sleep timer

--- a/apps/site/src/app/features/settings/components/settings/settings.component.html
+++ b/apps/site/src/app/features/settings/components/settings/settings.component.html
@@ -52,8 +52,13 @@
 
     <h3>Таймер выключения</h3>
     <fieldset class="timer">
+      <label
+        ><input type="checkbox" formControlName="timerEnabled" />
+        Включить</label
+      >
       <ngx-mat-timepicker-field
         formControlName="timer"
+        [disabled]="settings().timer === 0"
         [controlOnly]="true"
         [format]="24"
       ></ngx-mat-timepicker-field>
