--- a/apps/site/src/app/features/settings/components/settings/settings.component.scss
+++ b/apps/site/src/app/features/settings/components/settings/settings.component.scss
@@ -44,7 +44,11 @@
       &.timer {
         display: flex;
         align-items: center;
-        justify-content: center;
+        justify-content: space-between;
+
+        ngx-mat-timepicker-field {
+          margin: 0 auto;
+        }
 
         ::ng-deep {
           .mdc-line-ripple {
