Implemented search query for book search component

--- a/apps/site/src/app/features/books/components/books/books.component.html
+++ b/apps/site/src/app/features/books/components/books/books.component.html
@@ -1,8 +1,9 @@
 <div class="container">
   <h5 loading [thenShow]="books">
-    <form (submit)="search($event)">
+    <form (submit)="submit($event)">
       <input
-        (input)="updateQuery($event)"
+        [(ngModel)]="query"
+        [ngModelOptions]="{ standalone: true }"
         placeholder="Название книги или имя автора"
       />
       <button mat-fab extended="true" color="success" type="submit">
