--- a/apps/site/src/app/shared/components/main-menu/main-menu.component.html
+++ b/apps/site/src/app/shared/components/main-menu/main-menu.component.html
@@ -1,5 +1,5 @@
 <mat-nav-list>
-  <a mat-list-item [routerLink]="['welcome']" routerLinkActive="active">
+  <a mat-list-item [routerLink]="['index']" routerLinkActive="active">
     <mat-icon>home</mat-icon>
     Главная
   </a>
