--- a/apps/site/src/app/features/book/components/book/book.component.scss
+++ b/apps/site/src/app/features/book/components/book/book.component.scss
@@ -64,7 +64,7 @@
 
       .action-panel {
         display: block;
-        margin-top: $default-padding;
+        margin: 2 * $default-padding 0;
       }
     }
   }
