--- a/apps/site/src/app/shared/components/loading-indicator/loading-indicator.component.html
+++ b/apps/site/src/app/shared/components/loading-indicator/loading-indicator.component.html
@@ -1,1 +1,4 @@
-<mat-progress-bar mode="buffer"></mat-progress-bar>
+<mat-progress-bar
+  mode="buffer"
+  [style.visibility]="hidden() ? 'hidden' : 'visible'"
+></mat-progress-bar>
