--- a/apps/site/src/app/shared/components/main-menu/main-menu.component.html
+++ b/apps/site/src/app/shared/components/main-menu/main-menu.component.html
@@ -17,7 +17,7 @@
   }
   <a mat-list-item [routerLink]="['books']" routerLinkActive="active">
     <mat-icon>collections_bookmark</mat-icon>
-    Книги
+    Библотека
   </a>
   <a mat-list-item [routerLink]="['voice']" routerLinkActive="active">
     <mat-icon>volume_up</mat-icon>
