--- a/apps/site/src/app/features/books/components/books/books.component.html
+++ b/apps/site/src/app/features/books/components/books/books.component.html
@@ -1,5 +1,12 @@
 <div class="container">
   <h5 loading [thenShow]="books">
+    Поиск по имени
+    <small
+      ><a [routerLink]="['/advanced-search']" class="underline"
+        >расширенный поиск</a
+      ></small
+    >
+    <br />
     <form (submit)="submit($event)">
       <input
         [(ngModel)]="query"
