Advanced search BETA implementation

--- a/apps/site/src/app/features/books/components/books/books.component.html
+++ b/apps/site/src/app/features/books/components/books/books.component.html
@@ -4,7 +4,8 @@
     <small
       ><a [routerLink]="['/advanced-search']" class="underline"
         >расширенный поиск</a
-      ></small
+      >
+      (Beta)</small
     >
     <br />
     <form (submit)="submit($event)">
