--- a/apps/site/src/app/features/advanced-search/components/advanced-search/advanced-search.component.scss
+++ b/apps/site/src/app/features/advanced-search/components/advanced-search/advanced-search.component.scss
@@ -41,8 +41,11 @@
 
       &.parameter-grid {
         max-width: 600px;
-        display: grid;
-        grid-template-columns: 1fr 2fr;
+        display: flex;
+
+        input {
+          width: 100px;
+        }
       }
 
       &.genres-grid {
