--- a/apps/site/src/app/features/player/components/book-canvas/book-canvas.component.scss
+++ b/apps/site/src/app/features/player/components/book-canvas/book-canvas.component.scss
@@ -26,6 +26,11 @@ div {
     }
 
     h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6,
     section {
       padding: 0 $default-padding * 2;
     }
