--- a/apps/site/src/app/features/advanced-search/components/advanced-search/advanced-search.component.html
+++ b/apps/site/src/app/features/advanced-search/components/advanced-search/advanced-search.component.html
@@ -7,66 +7,45 @@
   </h5>
 
   <form [formGroup]="form" (submit)="submit($event)">
-    <section>
-      <span class="header">Режим поиска:</span>
-      <label
-        ><input type="radio" formControlName="mode" value="and" />"И" (каждое
-        условие)</label
-      >
-      <label
-        ><input type="radio" formControlName="mode" value="or" />"ИЛИ (хотя бы
-        одно из условий)</label
-      >
+    <section class="parameter-grid">
+      <span>Рейтинг не ниже чем:</span>
+      <input type="text" formControlName="rating" />
+      <span>(из 10)</span>
       <button mat-fab extended="true" color="success" type="submit">
         <mat-icon>search</mat-icon>
         Искать
       </button>
     </section>
 
-    <section class="parameter-grid">
-      <span>Рейтинг не ниже чем:</span>
-      <input type="text" formControlName="rating" />
-      <span>(из 10)</span>
-    </section>
-
     <details #genresContainer>
       <summary>Жанры</summary>
       <section libPerfectScrollbar class="genres-grid">
         @for (group of Object.keys(FB_GENRES_TRANSLATED_STRUCTURED); track
-        group) {
-        {{ group }}<br />
-        @if (FB_GENRES_TRANSLATED_STRUCTURED[group].length) {
+        group) { @if (isGenreGroup(FB_GENRES_TRANSLATED_STRUCTURED[group])) {
+        {{ group }}
         <div class="group">
-          @for (genre of $any(FB_GENRES_TRANSLATED_STRUCTURED[group]); track
-          genre) {
-          <label>
-            <input
-              type="checkbox"
-              [formControlName]="FB2_GENRES_KEY_VALUE_SWAPPED[genre]"
-            />
-            <span>{{ genre }}</span>
-          </label>
+          @for (subGroup of Object.keys(FB_GENRES_TRANSLATED_STRUCTURED[group]);
+          track subGroup) {
+          {{ subGroup }}
+          <div class="subgroup">
+            <genre-input-group
+              [formGroup]="form"
+              [controlNames]="
+                $any(FB_GENRES_TRANSLATED_STRUCTURED[group])[subGroup]
+              "
+            ></genre-input-group>
+          </div>
           }
         </div>
-        } @else { @for (subGroup of
-        Object.keys(FB_GENRES_TRANSLATED_STRUCTURED[group]); track subGroup) {
+        } @else {
+        {{ group }}
         <div class="group">
-          {{ subGroup }}
-          <div class="group">
-            @for (genre of
-            $any(FB_GENRES_TRANSLATED_STRUCTURED[group])[subGroup]; track genre)
-            {
-            <label>
-              <input
-                type="checkbox"
-                [formControlName]="FB2_GENRES_KEY_VALUE_SWAPPED[genre]"
-              />
-              <span>{{ genre }}</span>
-            </label>
-            }
-          </div>
+          <genre-input-group
+            [formGroup]="form"
+            [controlNames]="$any(FB_GENRES_TRANSLATED_STRUCTURED[group])"
+          ></genre-input-group>
         </div>
-        } } }
+        } }
       </section>
     </details>
 
