--- a/apps/site/src/app/features/player/components/book-canvas/book-canvas.component.html
+++ b/apps/site/src/app/features/player/components/book-canvas/book-canvas.component.html
@@ -1,7 +1,11 @@
 <div #container>
   @if (bookData !== null) {
   <div class="scrollable-canvas" libPerfectScrollbar cdkVirtualScrollingElement>
-    <h4>{{ bookData.author.full }} - {{ bookData.name }}</h4>
+    <h4>
+      {{ bookData.author.full }} - {{ bookData.name }} @if (book()!.rating) {
+      <lib-star-rating [rating]="book()!.rating!"></lib-star-rating>
+      }
+    </h4>
     <section class="title-picture-container">
       <img
         [src]="coverSrc()"
