--- a/apps/site/src/app/features/player/components/book-canvas/book-canvas.component.scss
+++ b/apps/site/src/app/features/player/components/book-canvas/book-canvas.component.scss
@@ -35,6 +35,11 @@ div {
       padding: 0 $default-padding * 2;
     }
 
+    lib-star-rating {
+      display: inline-block;
+      margin-left: $default-padding;
+    }
+
     img {
       max-width: 100%;
     }
