Added advanced search query string; names and paths refactoring;

--- a/apps/site/src/app/features/advanced-search/components/advanced-search/advanced-search.component.html
+++ b/apps/site/src/app/features/advanced-search/components/advanced-search/advanced-search.component.html
@@ -11,10 +11,11 @@
       <span>Рейтинг не ниже чем:</span>
       <input
         matInput
-        min="0.5"
+        min="0"
         max="10"
         step="0.5"
         type="number"
+        placeholder="От 0 до 10"
         formControlName="rating"
       />
       <lib-star-rating
