Added advanced search query string; names and paths refactoring;

--- a/apps/site/src/app/features/book-card/components/book-card/book-card.component.html
+++ b/apps/site/src/app/features/book-card/components/book-card/book-card.component.html
@@ -22,7 +22,7 @@
       }
     </lib-author-genres-list>
     @if (book.date) {
-    <span class="date">{{ book.date }}г.</span>
+    <span class="date">{{ book.date }}</span>
     }
     <span class="annotation" [innerHTML]="book.annotation"></span>
     <div class="action-panel">
