--- a/apps/site/src/app/features/advanced-search/components/advanced-search/advanced-search.component.html
+++ b/apps/site/src/app/features/advanced-search/components/advanced-search/advanced-search.component.html
@@ -20,6 +20,8 @@
       />
       <lib-star-rating
         [rating]="form.controls['rating'].valueChanges | async"
+        [formGroup]="form"
+        formControlName="rating"
         [showLabel]="false"
       ></lib-star-rating>
       <button mat-fab extended="true" color="success" type="submit">
