--- a/apps/site/src/app/features/advanced-search/components/advanced-search/advanced-search.component.html
+++ b/apps/site/src/app/features/advanced-search/components/advanced-search/advanced-search.component.html
@@ -19,9 +19,7 @@
         formControlName="rating"
       />
       <lib-star-rating
-        [rating]="form.controls['rating'].valueChanges | async"
-        [formGroup]="form"
-        formControlName="rating"
+        formControlName="starRating"
         [showLabel]="false"
       ></lib-star-rating>
       <button mat-fab extended="true" color="success" type="submit">
