--- a/apps/site/src/app/features/advanced-search/components/advanced-search/advanced-search.component.html
+++ b/apps/site/src/app/features/advanced-search/components/advanced-search/advanced-search.component.html
@@ -17,9 +17,11 @@
         type="number"
         placeholder="От 0 до 10"
         formControlName="rating"
+        [value]="form.value.rating"
       />
       <lib-star-rating
-        formControlName="starRating"
+        formControlName="rating"
+        [rating]="form.value.rating"
         [showLabel]="false"
       ></lib-star-rating>
       <button mat-fab extended="true" color="success" type="submit">
