--- a/apps/site/src/app/features/player/components/book-canvas/book-canvas.component.html
+++ b/apps/site/src/app/features/player/components/book-canvas/book-canvas.component.html
@@ -1,6 +1,6 @@
 <div #container>
   @if (bookData !== null) {
-  <div class="scrollable-canvas" libPerfectScrollbar cdkVirtualScrollingElement>
+  <div class="scrollable-canvas" cdkVirtualScrollingElement>
     <h4>
       {{ bookData.author.full }} - {{ bookData.name }} @if (book()!.rating) {
       <lib-star-rating
