--- a/apps/site/src/app/features/settings/components/settings/settings.component.html
+++ b/apps/site/src/app/features/settings/components/settings/settings.component.html
@@ -1,4 +1,4 @@
-<div class="container" libPerfectScrollbar>
+<div class="container">
   <h1>Настройки</h1>
   <form [formGroup]="form">
     <h3>Голос</h3>
