--- a/apps/site/src/app/features/voice/components/voice.component.html
+++ b/apps/site/src/app/features/voice/components/voice.component.html
@@ -1,4 +1,4 @@
-<div #container class="container" libPerfectScrollbar>
+<div #container class="container">
   <h1>Форма озвучки произвольного текста</h1>
 
   <textarea
