--- a/apps/site/src/app/features/welcome/components/welcome.component.html
+++ b/apps/site/src/app/features/welcome/components/welcome.component.html
@@ -1,4 +1,4 @@
-<div class="container" libPerfectScrollbar>
+<div class="container">
   @if (authorSummary().length > 1) {
   <h2>Случайные авторы дня:</h2>
   } @else if (authorSummary().length === 1) {
