--- a/apps/site/src/app/features/book-search/components/books/book-search.component.html
+++ b/apps/site/src/app/features/book-search/components/books/book-search.component.html
@@ -25,7 +25,7 @@
     @if (data()) { @if (data()!.length === 0) {
     <span>Книги не найдены</span>
     }
-    <div libPerfectScrollbar class="books-grid">
+    <div class="books-grid">
       @for (item of data(); track item.id){
       <nav>
         <lib-tag-link [value]="item.id" linkPrefix="/book">{{
