--- a/apps/site/src/app/features/player/components/book-canvas/book-canvas.component.scss
+++ b/apps/site/src/app/features/player/components/book-canvas/book-canvas.component.scss
@@ -1,13 +1,13 @@
 @use 'vars' as *;
+@use 'mixins' as *;
 
 div {
   width: 100%;
   height: 100%;
 
   .scrollable-canvas {
+    @include scrollable-container;
     display: flex;
-    position: relative;
-    overflow-y: hidden;
     flex-direction: column;
     gap: 1rem;
     padding-top: 2 * $default-padding;
