--- a/apps/site/src/app/main/styles/_mixins.scss
+++ b/apps/site/src/app/main/styles/_mixins.scss
@@ -12,6 +12,6 @@
   display: block;
   width: 100%;
   height: 100%;
-  overflow: hidden;
-  position: relative;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
