--- a/apps/site/src/app/features/book-search/components/books/book-search.component.scss
+++ b/apps/site/src/app/features/book-search/components/books/book-search.component.scss
@@ -7,10 +7,9 @@
   height: 100%;
 
   .container {
+    @include scrollable-container;
     display: flex;
     flex-direction: column;
-    width: 100%;
-    height: 100%;
     padding: 2 * $default-padding;
 
     h5 {
