--- a/apps/site/src/app/main/styles/_mixins.scss
+++ b/apps/site/src/app/main/styles/_mixins.scss
@@ -14,4 +14,26 @@
   height: 100%;
   overflow-y: auto;
   overflow-x: hidden;
+  &::-webkit-scrollbar {
+    width: 15px;
+  }
+  &::-webkit-scrollbar-track {
+    background-color: rgb(100 100 100 / 10%);
+  }
+  &::-webkit-scrollbar-thumb {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    border-radius: 6px;
+    background-color: rgb(100 100 100 / 80%);
+    min-height: 25px;
+  }
+  // Styles for touch devices
+  @media (hover: none) and (pointer: coarse) {
+    &::-webkit-scrollbar {
+      width: 30px;
+    }
+    &::-webkit-scrollbar-thumb {
+      border-radius: 10px;
+      min-height: 40px;
+    }
+  }
 }
