--- a/apps/site/src/app/features/advanced-search/components/advanced-search/advanced-search.component.html
+++ b/apps/site/src/app/features/advanced-search/components/advanced-search/advanced-search.component.html
@@ -2,7 +2,7 @@
   <h5>
     Расширенный поиск
     <small
-      ><a [routerLink]="['/books']" class="underline">обычный поиск</a></small
+      ><a [routerLink]="['/books']" class="underline">поиск по имени</a></small
     >
   </h5>
 
@@ -32,30 +32,7 @@
 
     <details #genresContainer>
       <summary>Жанры</summary>
-      <section class="genres-grid">
-        @for (group of Object.keys(FB_GENRES_TRANSLATED_STRUCTURED); track
-        group) { @if (isGenreGroup(FB_GENRES_TRANSLATED_STRUCTURED[group])) {
-        <genre-input-group [name]="group">
-          @for (subGroup of Object.keys(FB_GENRES_TRANSLATED_STRUCTURED[group]);
-          track subGroup) {
-          <genre-input-group
-            [name]="subGroup"
-            [subgroup]="true"
-            [formGroup]="form"
-            [controlNames]="
-              $any(FB_GENRES_TRANSLATED_STRUCTURED[group])[subGroup]
-            "
-          ></genre-input-group>
-          }
-        </genre-input-group>
-        } @else {
-        <genre-input-group
-          [formGroup]="form"
-          [controlNames]="$any(FB_GENRES_TRANSLATED_STRUCTURED[group])"
-          [name]="group"
-        ></genre-input-group>
-        } }
-      </section>
+      <genre-input-control [form]="form"></genre-input-control>
     </details>
 
     <div class="action-panel">
