Auto open / close genre categories based on selection

--- a/apps/site/src/app/features/advanced-search/components/advanced-search/advanced-search.component.html
+++ b/apps/site/src/app/features/advanced-search/components/advanced-search/advanced-search.component.html
@@ -30,7 +30,7 @@
       </button>
     </section>
 
-    <details #genresContainer>
+    <details open="open">
       <summary>Жанры</summary>
       <genre-input-control [form]="form"></genre-input-control>
     </details>
@@ -42,8 +42,9 @@
       </button>
     </div>
   </form>
-
-  <div #searchResult class="search-result">
+  <p>&nbsp;</p>
+  <h5 #searchResult>Результаты поиска</h5>
+  <div class="search-result">
     @if (data()) { @if (data()!.length === 0) {
     <span>По вашему запросы книги не найдены</span>
     }
